edit courses details page

--- a/course-details.html
+++ b/course-details.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <div class="edu_nav">
+    <div class="edu_nav ">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light bg-faded">
                 <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
@@ -290,10 +290,10 @@
                             </div>
                             <div class="teacher_fee single_items ">
                                 <span>Price</span>
-                                <span class="courses_price">$50.56</span>
+                                <span class="courses_price">Free</span>
                             </div>
                             <div class="buy_btn single_items">
-                                <a href="#" title="">Buy Now</a>
+                                <a href="#" title="">Start Now</a>
                             </div>
                         </div>
                         <div class="details-img-bxo">
@@ -640,7 +640,7 @@
 
 
 
-                    <div class="recent_post_wrapper popular_courses_post widget_single">
+                    <!-- <div class="recent_post_wrapper popular_courses_post widget_single">
                         <div class="items-title">
                             <h3 class="title">Our Popular Courses</h3>
                         </div>
@@ -679,9 +679,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="get_discount widget_single">
+                    <!-- <div class="get_discount widget_single">
                         <div class="items-title">
                             <p>New Spcial Offers</p>
                             <h3>Get 35% Off</h3>
@@ -689,7 +689,7 @@
                         </div>
 
                         <img src="images/shapes/testimonial_2_shpe_2.png" alt="" class="courses_feaures_shpe">
-                    </div>  
+                    </div>   -->
 
                     <div class="archives widget_single">
                         <div class="items-title">
@@ -732,7 +732,7 @@
                         <div class="courses_banner_wrapper">
                             <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
-                                <a href="#" class="read_more-btn">$150</a>
+                                <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
@@ -777,7 +777,7 @@
                         <div class="courses_banner_wrapper">
                             <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
-                                <a href="#" class="read_more-btn">120$</a>
+                                <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
@@ -798,7 +798,7 @@
                         <div class="courses_banner_wrapper">
                             <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
-                                <a href="#" class="read_more-btn">120$</a>
+                                <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
@@ -819,7 +819,7 @@
                         <div class="courses_banner_wrapper">
                             <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
-                                <a href="#" class="read_more-btn">120$</a>
+                                <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
@@ -840,7 +840,7 @@
                         <div class="courses_banner_wrapper">
                             <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
-                                <a href="#" class="read_more-btn">120$</a>
+                                <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
@@ -918,7 +918,7 @@
                 </div>
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
-                        <p>&copy; Copyright 2019 Esuwise Design by Ecologytheme</p>
+                        <p>&copy; Copyright 2020 ITI-PHP full-stack</p>
                     </div>
                  </div>
             </div>
@@ -960,7 +960,7 @@
         <div class="switched-options">
             <div class="config-title">
                 <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
-                <p>Education Template</p>
+                <p>ITI-PHP full-stack</p>
                 
             </div>
             <div class="demos">
