--- a/teacher-profile.html
+++ b/teacher-profile.html
@@ -274,7 +274,7 @@
                             <li><a href="#"><i class="fab fa-instagram ins-icon"></i></a></li>
                         </ul>
                     </div> 
-                    <div class="teacher-skills">
+                    <!-- <div class="teacher-skills">
                         <div class="skill-single">
                             <span>HTML - <span class="skills_lavel">80%</span></span>
                             <span><span style="width:80%;"></span></span>
@@ -291,7 +291,7 @@
                             <span>CSS3 - <span class="skills_lavel">75%</span></span>
                             <span><span style="width:75%;"></span></span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div><!-- Ends: .teacher-detail-left -->
             <div class="col-sm-8 teacher-detail-right">
@@ -463,6 +463,8 @@
 
 
 
+
+
 <!--Start Courses Area Section-->
 <section class="popular_courses">
     <div class="container"> 
@@ -549,7 +551,7 @@
         </div>
 
     </div>
-</section><!-- ./ End Courses Area section -->
+</section> <!-- ./ End Courses Area section -->
 
 
 <!-- Footer -->  
@@ -605,7 +607,7 @@
                 </div>
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
-                        <a target="_blank" href="https://www.templateshub.net">Templates Hub</a>
+                        <a target="_blank" href="#">ITI-PHP Full Stack</a>
                     </div>
                  </div>
             </div>
