--- a/course.html
+++ b/course.html
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div class="edu_nav">
+    <div class="edu_nav ">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light bg-faded">
                 <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
@@ -269,7 +269,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">$150</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -319,7 +319,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">120$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -343,7 +343,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">250$</a>
+                            <a href="#" class="read_more-btn">Free$</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -367,7 +367,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">180$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -391,7 +391,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">130$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -414,7 +414,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">250$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -438,7 +438,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">180$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -462,7 +462,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">130$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -546,7 +546,7 @@
                 </div>
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
-                        <a target="_blank" href="https://www.templateshub.net">Templates Hub</a>
+                        <a target="" href="#"><p>&copy; Copyright 2020 ITI-PHP full-stack</p></a>
                     </div>
                  </div>
             </div>
