video player page

--- a/course-details.html
+++ b/course-details.html
@@ -293,7 +293,7 @@
                                 <span class="courses_price">Free</span>
                             </div>
                             <div class="buy_btn single_items">
-                                <a href="#" title="">Start Now</a>
+                                <a href="video_player.html" title="">Start Now</a>
                             </div>
                         </div>
                         <div class="details-img-bxo">
