edit on teacher and become a teacher page

--- a/teacher-profile.html
+++ b/teacher-profile.html
@@ -274,24 +274,7 @@
                             <li><a href="#"><i class="fab fa-instagram ins-icon"></i></a></li>
                         </ul>
                     </div> 
-                    <!-- <div class="teacher-skills">
-                        <div class="skill-single">
-                            <span>HTML - <span class="skills_lavel">80%</span></span>
-                            <span><span style="width:80%;"></span></span>
-                        </div>
-                        <div class="skill-single">
-                            <span>Wordpress - <span class="skills_lavel">70%</span></span>
-                            <span><span style="width:70%;"></span></span>
-                        </div>
-                        <div class="skill-single">
-                            <span>Photoshop - <span class="skills_lavel">90%</span></span>
-                            <span><span style="width:90%;"></span></span>
-                        </div>
-                        <div class="skill-single">
-                            <span>CSS3 - <span class="skills_lavel">75%</span></span>
-                            <span><span style="width:75%;"></span></span>
-                        </div>
-                    </div> -->
+                    
                 </div>
             </div><!-- Ends: .teacher-detail-left -->
             <div class="col-sm-8 teacher-detail-right">
@@ -356,7 +339,7 @@
                                                     <div class="courses_banner_wrapper">
                                                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                                                         <div class="purchase_price">
-                                                            <a href="#" class="read_more-btn">$150</a>
+                                                            <a href="#" class="read_more-btn">Free</a>
                                                         </div>
                                                     </div>
                                                     <div class="courses_info_wrapper">
@@ -406,7 +389,7 @@
                                                     <div class="courses_banner_wrapper">
                                                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                                                         <div class="purchase_price">
-                                                            <a href="#" class="read_more-btn">120$</a>
+                                                            <a href="#" class="read_more-btn">Free</a>
                                                         </div>
                                                     </div>
                                                     <div class="courses_info_wrapper">
@@ -430,7 +413,7 @@
                                                     <div class="courses_banner_wrapper">
                                                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                                                         <div class="purchase_price">
-                                                            <a href="#" class="read_more-btn">250$</a>
+                                                            <a href="#" class="read_more-btn">Free</a>
                                                         </div>
                                                     </div>
                                                     <div class="courses_info_wrapper">
@@ -480,7 +463,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">$150</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -530,7 +513,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">120$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -607,7 +590,7 @@
                 </div>
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
-                        <a target="_blank" href="#">ITI-PHP Full Stack</a>
+                        <a target="_blank" href="#">© Copyright 2020 ITI-PHP full-stack</a>
                     </div>
                  </div>
             </div>
@@ -653,8 +636,6 @@
                 
             </div>
             <div class="demos">
-                <div><a href="index-2.html" data-toggle="tooltip" data-placement="top" title="Home Style One"><img class="main-image img-fluid" src="demo/index_1.png" alt=""/></a></div>
-                <div><a href="index-3.html" data-toggle="tooltip" data-placement="top" title="Home Style Two"><img class="main-image img-fluid" src="demo/index_2.png" alt=""/></a></div>
                 <div><a href="index-4.html" data-toggle="tooltip" data-placement="top" title="Home Style Three"><img class="main-image img-fluid" src="demo/index_3.png" alt=""/></a></div>
                 <ul class="list-unstyled clearfix">
                     <li><a href="about.html" data-toggle="tooltip" data-placement="top" title="About Page"><img src="demo/about.png" alt="" class="img-fluid"></a></li>
