--- a/forgot-password.html
+++ b/forgot-password.html
@@ -338,7 +338,7 @@
                 </div>
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
-                        <a target="_blank" href="https://www.templateshub.net">Templates Hub</a>
+                        <a target="_blank" href="">© Copyright 2020 ITI-PHP full-stack</a>
                     </div>
                  </div>
             </div>
