edit on courses page

--- a/course.html
+++ b/course.html
@@ -267,15 +267,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Make Better Decisions</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Jhonthan Smith</a></div>
+                            <h3><a href="course-details.html">Make Better Decisions</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Jhonthan Smith</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -293,15 +293,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">How To Be A Speaker</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Denise Wood</a></div>
+                            <h3><a href="course-details.html">How To Be A Speaker</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Denise Wood</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -317,15 +317,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Network Introductions</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                            <h3><a href="course-details.html">Network Introductions</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -341,15 +341,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">Free$</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
                             <h3><a href="#">Brand Management</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">John Porter</a></div>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">John Porter</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -365,15 +365,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">Free</a>
+                            <a href="course-details.html" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Moralities Of Everyday</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Mittie Hill</a></div>
+                            <h3><a href="course-details.html">Moralities Of Everyday</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Mittie Hill</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -389,15 +389,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Life Coach Training</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Marian Dupre</a></div>
+                            <h3><a href="course-details.html">Life Coach Training</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Marian Dupre</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -412,15 +412,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Brand Management</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">John Porter</a></div>
+                            <h3><a href="course-details.html">Brand Management</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">John Porter</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -436,15 +436,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Moralities Of Everyday</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Mittie Hill</a></div>
+                            <h3><a href="course-details.html">Moralities Of Everyday</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Mittie Hill</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
@@ -460,15 +460,15 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="single-courses">
                     <div class="courses_banner_wrapper">
-                        <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                        <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
                             <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
                         <div class="courses_title">
-                            <h3><a href="#">Life Coach Training</a></h3>
-                            <div class="teachers_name">Teacher - <a href="#" title="">Marian Dupre</a></div>
+                            <h3><a href="course-details.html">Life Coach Training</a></h3>
+                            <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Marian Dupre</a></div>
                         </div>
                         <div class="courses_info">
                             <ul class="list-unstyled">
