edit on course_video page

--- a/video_player.html
+++ b/video_player.html
@@ -256,15 +256,15 @@
                 <div id="related_courses" class="owlCarousel">
                     <div class="single-courses">
                         <div class="courses_banner_wrapper">
-                            <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
+                            <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
                                 <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
                             <div class="courses_title">
-                                <h3><a href="#">Make Better Decisions</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">Jhonthan Smith</a></div>
+                                <h3><a href="course-details.html">Make Better Decisions</a></h3>
+                                <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Jhonthan Smith</a></div>
                             </div>
                             <div class="courses_info">
                                 <ul class="list-unstyled">
@@ -279,15 +279,15 @@
 
                     <div class="single-courses">
                         <div class="courses_banner_wrapper">
-                            <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
+                            <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
                                 <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
                             <div class="courses_title">
-                                <h3><a href="#">How To Be A Speaker</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">Denise Wood</a></div>
+                                <h3><a href="course-details.html">How To Be A Speaker</a></h3>
+                                <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Denise Wood</a></div>
                             </div>
                             <div class="courses_info">
                                 <ul class="list-unstyled">
@@ -301,15 +301,15 @@
 
                     <div class="single-courses">
                         <div class="courses_banner_wrapper">
-                            <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                            <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
                                 <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
                             <div class="courses_title">
-                                <h3><a href="#">Network Introductions</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                                <h3><a href="course-details.html">Network Introductions</a></h3>
+                                <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                             </div>
                             <div class="courses_info">
                                 <ul class="list-unstyled">
@@ -322,15 +322,15 @@
                     </div>                     
                     <div class="single-courses">
                         <div class="courses_banner_wrapper">
-                            <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                            <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
                                 <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
                             <div class="courses_title">
-                                <h3><a href="#">Network Introductions</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                                <h3><a href="course-details.html">Network Introductions</a></h3>
+                                <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                             </div>
                             <div class="courses_info">
                                 <ul class="list-unstyled">
@@ -343,15 +343,15 @@
                     </div>                     
                     <div class="single-courses">
                         <div class="courses_banner_wrapper">
-                            <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                            <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
                                 <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
                             <div class="courses_title">
-                                <h3><a href="#">Network Introductions</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                                <h3><a href="course-details.html">Network Introductions</a></h3>
+                                <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                             </div>
                             <div class="courses_info">
                                 <ul class="list-unstyled">
@@ -364,15 +364,15 @@
                     </div>                     
                     <div class="single-courses">
                         <div class="courses_banner_wrapper">
-                            <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
+                            <div class="courses_banner"><a href="course-details.html"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                             <div class="purchase_price">
                                 <a href="#" class="read_more-btn">Free</a>
                             </div>
                         </div>
                         <div class="courses_info_wrapper">
                             <div class="courses_title">
-                                <h3><a href="#">Network Introductions</a></h3>
-                                <div class="teachers_name">Teacher - <a href="#" title="">Preston Marshall</a></div>
+                                <h3><a href="course-details.html">Network Introductions</a></h3>
+                                <div class="teachers_name">Teacher - <a href="teacher-profile.html" title="">Preston Marshall</a></div>
                             </div>
                             <div class="courses_info">
                                 <ul class="list-unstyled">
