--- a/contact.html
+++ b/contact.html
@@ -79,10 +79,8 @@
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
                         <li class="nav-item"><a href="#" class="nav-link">Home</a>
                             <ul class="navbar-nav nav mx-auto">
-                                <li class="nav-item"><a href="index-2.html" class="nav-link">Home Version 01</a></li>
-                                <li class="nav-item"><a href="index-3.html" class="nav-link">Home Version 02</a></li>
-                                <li class="nav-item"><a href="index-4.html" class="nav-link">Home Version 03</a></li>
-                                <li class="nav-item"><a href="index-5.html" class="nav-link">Home Version 04</a></li>
+                                <li class="nav-item"><a href="index.html" class="nav-link">Home </a></li>
+                            
                             </ul>
                         </li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
@@ -95,9 +93,7 @@
                         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a>
                             <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
-                                <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li> 
-                                <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
-                                <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
+                                
                             </ul> 
                         </li>
                         <li class="nav-item"><a href="#" class="nav-link">Pages</a>
@@ -398,7 +394,7 @@
                 </div>
                  <div class="col-12 col-md-12 col-lg-12">
                     <div class="copyright">
-                        <a target="_blank" href="https://www.templateshub.net">Templates Hub</a>
+                        <a target="" href="#"><p>&copy; Copyright 2020 ITI-PHP full-stack</p></a>
                     </div>
                  </div>
             </div>
