--- a/index.html
+++ b/index.html
@@ -71,13 +71,8 @@
                 <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
-                        <li class="nav-item"><a href="#" class="nav-link active">Home</a>
-                            <ul class="navbar-nav nav mx-auto">
-                                <li class="nav-item"><a href="index-2.html" class="nav-link">Home Version 01</a></li>
-                                <li class="nav-item"><a href="index-3.html" class="nav-link">Home Version 02</a></li>
-                                <li class="nav-item"><a href="index-4.html" class="nav-link">Home Version 03</a></li>
-                                <li class="nav-item"><a href="index-5.html" class="nav-link">Home Version 04</a></li>
-                            </ul> 
+                        <li class="nav-item"><a href="index.html" class="nav-link active">Home</a>
+                            
                         </li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="course.html" class="nav-link">Courses</a>
@@ -332,7 +327,7 @@
 				<div class="feature_single feature_single_1">
 					<img src="images/features/courses_provide_1.jpg" alt="">
 					<div class="feature_content">
-						<a href="#" title=""><h3>Design</h3></a>
+						<a href="Design.html" title=""><h3>Design</h3></a>
 						<p>Over 700 Courses</p>
 					</div>
 				</div>
@@ -342,7 +337,7 @@
 				<div class="feature_single feature_single_2">
 					<img src="images/features/courses_provide_2.jpg" alt="">
 					<div class="feature_content">
-						<a href="#" title=""><h3>Web Development</h3></a>
+						<a href="Web Development.html" title=""><h3>Web Development</h3></a>
 						<p>Over 500 Courses</p>
 					</div>
 				</div>
@@ -352,7 +347,7 @@
 				<div class="feature_single feature_single_3">
 					<img src="images/features/courses_provide_3.jpg" alt="">
 					<div class="feature_content">
-						<a href="#" title=""><h3>Marketing</h3></a>
+						<a href="Marketing.html" title=""><h3>Marketing</h3></a>
 						<p>Over 450 Courses</p>
 					</div>
 				</div>
@@ -362,7 +357,7 @@
 				<div class="feature_single feature_single_4">
 					<img src="images/features/courses_provide_4.jpg" alt="">
 					<div class="feature_content">
-						<a href="#" title=""><h3>Photography</h3></a>
+						<a href="Photography.html" title=""><h3>Photography</h3></a>
 						<p>Over 500 Courses</p>
 					</div>
 				</div>
@@ -372,7 +367,7 @@
 				<div class="feature_single feature_single_5">
 					<img src="images/features/courses_provide_5.jpg" alt="">
 					<div class="feature_content">
-						<a href="#" title=""><h3>Science</h3></a>
+						<a href="Science.html" title=""><h3>Science</h3></a>
 						<p>Over 1000 Courses</p>
 					</div>
 				</div>
@@ -381,7 +376,7 @@
 				<div class="feature_single feature_single_6">
 					<img src="images/features/courses_provide_6.jpg" alt="">
 					<div class="feature_content">
-						<a href="#" title=""><h3>Finance</h3></a>
+						<a href="Finance.html" title=""><h3>Finance</h3></a>
 						<p>Over 350 Courses</p>
 					</div>
 				</div>
