--- a/video_player.html
+++ b/video_player.html
@@ -76,13 +76,8 @@
                     <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
                     <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                         <ul class="navbar-nav nav lavalamp ml-auto menu">
-                            <li class="nav-item"><a href="#" class="nav-link">Home</a>
-                                <ul class="navbar-nav nav mx-auto">
-                                    <li class="nav-item"><a href="index-2.html" class="nav-link">Home Version 01</a></li>
-                                    <li class="nav-item"><a href="index-3.html" class="nav-link">Home Version 02</a></li>
-                                    <li class="nav-item"><a href="index-4.html" class="nav-link">Home Version 03</a></li>
-                                    <li class="nav-item"><a href="index-5.html" class="nav-link">Home Version 04</a></li>
-                                </ul>
+                            <li class="nav-item"><a href="index.html" class="nav-link">Home</a>
+                                
                             </li>
                             <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                             <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a>
