--- a/Marketing.html
+++ b/Marketing.html
@@ -86,13 +86,25 @@
                                 <li class="nav-item"><a href="course-details.html" class="nav-link">Courses Details</a></li>
                             </ul> 
                         </li>
-                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a>
+                        <li class="nav-item"><a href="course.html" class="nav-link">Categories</a>
                             <ul class="navbar-nav nav mx-auto">
+								<li class="nav-item"><a href="Design.html" class="nav-link">Design</a></li>
+								<li class="nav-item"><a href="Finance.html" class="nav-link">Finance</a></li>
+								<li class="nav-item"><a href="Marketing.html" class="nav-link">Marketing</a></li>
+								<li class="nav-item"><a href="Photography.html" class="nav-link">Photography</a></li>
+								<li class="nav-item"><a href="Science.html" class="nav-link">Science</a></li>
+								<li class="nav-item"><a href="Web Development.html" class="nav-link">Web Development</a></li>
+								
+                               
+                            </ul> 
+                        </li>
+                        <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a>
+                            <!-- <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
                                 <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li> 
                                 <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                            </ul> 
+                            </ul>  -->
                         </li>
                         <li class="nav-item"><a href="#" class="nav-link">Pages</a>
                             <ul class="navbar-nav nav mx-auto">
@@ -109,12 +121,12 @@
                                     </ul>    
                                 </li>                                
                                 <li class="nav-item"><a href="#" class="nav-link dropdown_icon">Blog</a>
-                                    <ul class="navbar-nav nav mx-auto">
+                                    <!-- <ul class="navbar-nav nav mx-auto">
                                         <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
                                         <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li> 
                                         <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
                                         <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                    </ul>    
+                                    </ul>     -->
                                 </li> 
                                 <li class="nav-item"><a href="become-a-teacher.html" class="nav-link">Become A Teacher</a></li>
                                 <li class="nav-item"><a href="teacher-profile.html" class="nav-link">Teachers Profile</a></li>
