--- a/teacher-profile.html
+++ b/teacher-profile.html
@@ -85,12 +85,12 @@
                             </ul> 
                         </li>
                         <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a>
-                            <ul class="navbar-nav nav mx-auto">
+                            <!-- <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
                                 <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li> 
                                 <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
                                 <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                            </ul> 
+                            </ul>  -->
                         </li>
                         <li class="nav-item"><a href="#" class="nav-link active">Pages</a>
                             <ul class="navbar-nav nav mx-auto">
