--- a/video_player.html
+++ b/video_player.html
@@ -87,12 +87,12 @@
                                 </ul> 
                             </li>
                             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a>
-                                <ul class="navbar-nav nav mx-auto">
+                                <!-- <ul class="navbar-nav nav mx-auto">
                                     <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
                                     <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li> 
                                     <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
                                     <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                </ul> 
+                                </ul>  -->
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link">Pages</a>
                                 <ul class="navbar-nav nav mx-auto">
@@ -108,13 +108,13 @@
                                             <li class="nav-item"><a href="event-details.html" class="nav-link">Event Details</a></li>
                                         </ul>    
                                     </li>                                
-                                    <li class="nav-item"><a href="#" class="nav-link dropdown_icon">Blog</a>
-                                        <ul class="navbar-nav nav mx-auto">
+                                    <li class="nav-item"><a href="blog.html" class="nav-link dropdown_icon">Blog</a>
+                                        <!-- <ul class="navbar-nav nav mx-auto">
                                             <li class="nav-item"><a href="blog.html" class="nav-link">Blog List</a></li> 
                                             <li class="nav-item"><a href="blog-2.html" class="nav-link">Blog Grid One</a></li> 
                                             <li class="nav-item"><a href="blog-3.html" class="nav-link">Blog Grid Two</a></li>
                                             <li class="nav-item"><a href="blog-details.html" class="nav-link">Blog Details</a></li>
-                                        </ul>    
+                                        </ul>     -->
                                     </li> 
                                     <li class="nav-item"><a href="become-a-teacher.html" class="nav-link">Become A Teacher</a></li>
                                     <li class="nav-item"><a href="teacher-profile.html" class="nav-link">Teachers Profile</a></li>
